refactor(handler): add x-rh-idm-version header
- Update dependencies.
- Add helpers for x-rh-idm-version header.
- Update openapi to use x-rh-idm-version.
- Regenerate code to match openapi.
- Add client version information to the logs.
- Update interactor to return the client version.
